# Crzgames_RCENet

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  xmake.lua
.github/workflows/: build-deploy-production.yml  build-deploy-staging.yml  dependabot.yml  deploy-release.yml
docs/: README.md  package-lock.json  package.json
docs/.vitepress/: config.mts
docs/.vitepress/theme/: custom.css
docs/src/: index.md
docs/src/api/: rcenet.md  rcenet_address.md  rcenet_host.md  rcenet_peer.md  rcenet_range.md  rcenet_socket.md  rcenet_time.md
docs/src/fr/: index.md
docs/src/fr/api/: rcenet.md  rcenet_address.md  rcenet_host.md  rcenet_packet.md  rcenet_protocol.md
docs/src/fr/guides/: distribution.md
docs/src/fr/guides/getting-started/: demarage-rapide.md  fonctionnalites.md  prerequisites.md  quick-start.md
docs/src/guides/: distribution.md
docs/src/guides/getting-started/: features.md  prerequisites.md  quick-start.md
include/rcenet/: callbacks.h  enet.h  list.h  protocol.h  time.h  types.h  unix.h  utility.h  win32.h
src/: address.c  callbacks.c  compress.c  host.c  list.c  packet.c  peer.c  protocol.c  unix.c  win32.c
